k8s/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway

        image: api-gateway:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"
