k8s/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: api.frontend.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: api-gateway-service

            port:
              number: 3000
